fixed text wrapping

--- a/table.css
+++ b/table.css
@@ -10,3 +10,10 @@
     background-color:#4B9CD3;
     color: #FFFFFF;
 }
+
+.wordwrap { 
+   white-space: pre-wrap;      /* CSS3 */   
+   white-space: -moz-pre-wrap; /* Firefox */   
+   white-space: -o-pre-wrap;   /* Opera 7 */    
+   word-wrap: break-word;      /* IE */
+}
